@@ -8,8 +8,8 @@
 #include "../main/mainworker.h"
 #include "../main/RFXtrx.h"
 #include "../main/SQLHelper.h"
-#include "../webserver/Base64.h"
 #include "../main/WebServer.h"
+#include "../webserver/Base64.h"
 #include "../webserver/cWebem.h"
 #include "../main/localtime_r.h"
 #define __STDC_FORMAT_MACROS
@@ -46,6 +46,9 @@ void CInfluxPush::UpdateSettings()
 	m_sql.GetPreferencesVar("InfluxIP", m_InfluxIP);
 	m_sql.GetPreferencesVar("InfluxPort", m_InfluxPort);
 	m_sql.GetPreferencesVar("InfluxDatabase", m_InfluxDatabase);
+	m_sql.GetPreferencesVar("InfluxUsername", m_InfluxUsername);
+	m_sql.GetPreferencesVar("InfluxPassword", m_InfluxPassword);
+
 	int InfluxDebugActiveInt = 0;
 	m_bInfluxDebugActive = false;
 	m_sql.GetPreferencesVar("InfluxDebug", InfluxDebugActiveInt);
@@ -54,15 +57,18 @@ void CInfluxPush::UpdateSettings()
 	}
 	m_szURL = "";
 	if (
-		(m_InfluxIP == "") ||
+		(m_InfluxIP.empty()) ||
 		(m_InfluxPort == 0) ||
-		(m_InfluxDatabase == "")
+		(m_InfluxDatabase.empty())
 		)
 		return;
 	std::stringstream sURL;
 	if (m_InfluxIP.find("://") == std::string::npos)
 		sURL << "http://";
-	sURL << m_InfluxIP << ":" << m_InfluxPort << "/write?db=" << m_InfluxDatabase;
+	sURL << m_InfluxIP << ":" << m_InfluxPort << "/write?";
+	if ((!m_InfluxUsername.empty()) && (!m_InfluxPassword.empty()))
+		sURL << "u=" << m_InfluxUsername << "&p=" << base64_decode(m_InfluxPassword) << "&";
+	sURL << "db=" << m_InfluxDatabase;
 	m_szURL = sURL.str();
 }
 
@@ -225,6 +231,8 @@ namespace http {
 			std::string remote = request::findValue(&req, "remote");
 			std::string port = request::findValue(&req, "port");
 			std::string database = request::findValue(&req, "database");
+			std::string username = request::findValue(&req, "username");
+			std::string password = request::findValue(&req, "password");
 			std::string debugenabled = request::findValue(&req, "debugenabled");
 			if (
 				(linkactive == "") ||
@@ -240,6 +248,8 @@ namespace http {
 			m_sql.UpdatePreferencesVar("InfluxIP", remote.c_str());
 			m_sql.UpdatePreferencesVar("InfluxPort", atoi(port.c_str()));
 			m_sql.UpdatePreferencesVar("InfluxDatabase", database.c_str());
+			m_sql.UpdatePreferencesVar("InfluxUsername", username.c_str());
+			m_sql.UpdatePreferencesVar("InfluxPassword", base64_encode(password));
 			m_sql.UpdatePreferencesVar("InfluxDebug", idebugenabled);
 			m_influxpush.UpdateSettings();
 			root["status"] = "OK";
@@ -272,6 +282,14 @@ namespace http {
 			if (m_sql.GetPreferencesVar("InfluxDatabase", sValue))
 			{
 				root["InfluxDatabase"] = sValue;
+			}
+			if (m_sql.GetPreferencesVar("InfluxUsername", sValue))
+			{
+				root["InfluxUsername"] = sValue;
+			}
+			if (m_sql.GetPreferencesVar("InfluxPassword", sValue))
+			{
+				root["InfluxPassword"] = base64_decode(sValue);
 			}
 			if (m_sql.GetPreferencesVar("InfluxDebug", nValue)) {
 				root["InfluxDebug"] = nValue;
