@@ -67,6 +67,14 @@
 			<td><input type="text" id="database" style="width: 150px; padding: .2em;" class="text ui-widget-content ui-corner-all" />
 		</tr>
 		<tr>
+			<td align="right" style="width:110px"><label><span data-i18n="Username"></span>:</label></td>
+			<td><input type="text" id="username" style="width: 150px; padding: .2em;" class="text ui-widget-content ui-corner-all" />
+		</tr>
+		<tr>
+			<td align="right" style="width:110px"><label><span data-i18n="Password"></span>:</label></td>
+			<td><input type="text" id="password" style="width: 150px; padding: .2em;" class="text ui-widget-content ui-corner-all" />
+		</tr>
+		<tr>
 			<td align="right" style="width:80px"><span data-i18n="Debug to logfile"></span>:</td>
 			<td><input type="checkbox" id="debugenabled" checked><label for="debugenabled"/></td>
 		</tr>
